--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
                 </div>
                 <div class="col-lg-10 col-md-9 col-sm-8 col-xs-6">
                   <h4 class="title">CanonicalFusion: Generating Drivable 3D Human Avatars from Multiple Images</h4>
-                  <p class="author"><b>Jisu Shin</b>, Junmyeong Lee, Seongmin Lee, Min-Gyu Park, Ju-Mi Kang, Ju Hong Yoon, and Hae-Gon Jeon (* equally contributed)</p>
+                  <p class="author"><b>Jisu Shin</b>, Junmyeong Lee, Seongmin Lee, Min-Gyu Park, Ju-Mi Kang, Ju Hong Yoon, and Hae-Gon Jeon</p>
                   <p class="description">European Conference on Computer Vision (ECCV), 2024</p>
                   <div class="link">
                     <a class="btn btn-outline-secondary btn-sm" target="_blank" href="https://ieeexplore.ieee.org/document/10508107"><i class="bi bi-file-earmark-pdf-fill"></i> Paper</a>
@@ -375,7 +375,7 @@
                 </div>
                 <div class="col-lg-10 col-md-9 col-sm-8 col-xs-6">
                   <h4 class="title">Task-specific Scene Structure Representations</h4>
-                  <p class="author"><b>Jisu Shin</b>, Seunghyun Shin, and Hae-Gon Jeon</p>
+                  <p class="author"><b>Jisu Shin*</b>, Seunghyun Shin*, and Hae-Gon Jeon (* equally contributed)</p>
                   <p class="description">The Thirty-Seventh AAAI Conference on Artificial Intelligence (AAAI), 2023</p>
                   <div class="link">
                     <a class="btn btn-outline-secondary btn-sm" target="_blank" href="https://cvpr.thecvf.com/Conferences/2024"><i class="bi bi-file-text"></i> AAAI</a>
