--- a/index.html
+++ b/index.html
@@ -270,11 +270,21 @@
 
             <div class="resume-item">
               <h4>Research Intern</h4>
-              <h5>2017 - 2018</h5>
-              <p><em>Gwangju Institute of Science and Technology, Gwangju, South Korea</em></p>
+              <h5>Jun. 2019 - Aug. 2019</h5>
+              <p><em> ETRI (Electronics and Telecommunications Research Institute), Daejeon, South Korea</em></p>
               <p>
               <ul>
-                <li>Researched natural language processing</li>
+                <li>Edge Computing & Computer Network</li>
+              </ul>
+              </p>
+            </div>
+            <div class="resume-item">
+              <h4>Research Intern</h4>
+              <h5>Jun. 2023 - March. 2024</h5>
+              <p><em> KETI (Korea Electronics Technology Institute), Gyeonggi-do, South Korea</em></p>
+              <p>
+              <ul>
+                <li>Drivable 3D Human Generation</li>
               </ul>
               </p>
             </div>
@@ -284,7 +294,7 @@
           
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
-              <h4>PhD of Electrical Engineering and Computer Science</h4>
+              <h4>PhD of AI Graduate School</h4>
               <h5>2021 - Present</h5>
               <p><em>Gwangju Institute of Science and Technology, Gwangju, South Korea</em></p>
               <p>Advisor: Prof. Hae-Gon Jeon</p>
@@ -324,7 +334,7 @@
 
         <div class="row portfolio-container">
 
-          <div class="portfolio-item filter-jour">
+          <div class="portfolio-item filter-conf">
             <div class="portfolio-wrap">
               <div class="row">
                 <div class="col-lg-2 col-md-3 col-sm-4 col-xs-6">
