--- a/index.html
+++ b/index.html
@@ -90,11 +90,11 @@
           <div class="image col-xl-5 d-flex align-items-stretch justify-content-center justify-content-lg-start"></div>
           <div class="col-xl-7 ps-0 ps-lg-5 pe-lg-1 d-flex align-items-stretch">
             <div class="content d-flex flex-column justify-content-center">
-              <h3>PhD candidate in EECS
+              <h3>PhD candidate in AI Graduate School
               </h3>
               <p>
                 I am a Ph.D. Candidate at School of Electrical Engineering and Computer Science, GIST, advised by Prof. Hae-Gon Jeon. I received B.S. degrees in EECS from GIST and GIST in 2020. 
-                My research is focused on 3D Human Digitization.
+                My research is focused on 3D Human Reconstruction.
               </p>
               <div class="row">
                 <div class="col-md-6 d-md-flex align-items-md-stretch">
