--- a/index.html
+++ b/index.html
@@ -333,7 +333,8 @@
                   <p class="author"><b>Jisu Shin</b>, Junmyeong Lee, Seongmin Lee, Min-Gyu Park, Ju-Mi Kang, Ju Hong Yoon, and Hae-Gon Jeon</p>
                   <p class="description">European Conference on Computer Vision (ECCV), 2024</p>
                   <div class="link">
-                    <a class="btn btn-outline-secondary btn-sm" target="_blank" href="https://ieeexplore.ieee.org/document/10508107"><i class="bi bi-file-earmark-pdf-fill"></i> Paper</a>
+                    <a class="btn btn-outline-secondary btn-sm" target="_blank" href="https://eccv.ecva.net/"><i class="bi bi-file-earmark-pdf-fill"></i> ECCV</a>
+                    <a class="btn btn-outline-secondary btn-sm" target="_blank" href="https://arxiv.org/pdf/2405.11867"><i class="bi bi-file-earmark-pdf-fill"></i> Paper</a>
                     <a class="btn btn-outline-secondary btn-sm" target="_blank"> Code (Not yet) </a>
                   </div>
                 </div>
@@ -345,12 +346,12 @@
             <div class="portfolio-wrap">
               <div class="row">
                 <div class="col-lg-2 col-md-3 col-sm-4 col-xs-6">
-                  <img src="assets/img/publication/depthprompt.png" class="img-fluid my-sm-1">
+                  <img src="assets/img/decolorfulnet.png" class="img-fluid my-sm-1">
                 </div>
                 <div class="col-lg-10 col-md-9 col-sm-8 col-xs-6">
                   <h4 class="title">Close Imitation of Expert Retouching for Black-and-White Photography</h4>
                   <p class="author">Seunghyun Shin, <b>Jisu Shin</b>, Jihwan Bae, Inwook Shim and Hae-Gon Jeon </p>
-                  <p class="description">Computer Vision and Pattern Recognition (CVPR) 2024</p>
+                  <p class="description">Computer Vision and Pattern Recognition (CVPR), 2024</p>
                   <div class="link">
                     <a class="btn btn-outline-secondary btn-sm" target="_blank" href="https://cvpr.thecvf.com/Conferences/2024"><i class="bi bi-file-text"></i> CVPR</a>
                     <a class="btn btn-outline-secondary btn-sm" target="_blank" href="https://arxiv.org/pdf/2405.11867"><i class="bi bi-file-earmark-pdf-fill"></i> Paper</a>
@@ -365,19 +366,15 @@
             <div class="portfolio-wrap">
               <div class="row">
                 <div class="col-lg-2 col-md-3 col-sm-4 col-xs-6">
-                  <video width="100%" height="100%" muted="" loop="" autoplay="" playsinline="" class="img-fluid my-sm-1">
-                    <source data-src="assets/img/publication/lmtraj-animated.webm" type="video/webm" src="assets/img/publication/lmtraj-animated.webm">
-                    <source data-src="assets/img/publication/lmtraj-animated.mp4" type="video/mp4" src="assets/img/publication/lmtraj-animated.mp4">
-                    Your browser does not support the video tag.
-                  </video>
+                  <img src="assets/img/ssgnet.png" class="img-fluid my-sm-1">
                 </div>
                 <div class="col-lg-10 col-md-9 col-sm-8 col-xs-6">
                   <h4 class="title">Task-specific Scene Structure Representations</h4>
                   <p class="author"><b>Jisu Shin*</b>, Seunghyun Shin*, and Hae-Gon Jeon (* equally contributed)</p>
                   <p class="description">The Thirty-Seventh AAAI Conference on Artificial Intelligence (AAAI), 2023</p>
                   <div class="link">
-                    <a class="btn btn-outline-secondary btn-sm" target="_blank" href="https://cvpr.thecvf.com/Conferences/2024"><i class="bi bi-file-text"></i> AAAI</a>
-                    <a class="btn btn-outline-secondary btn-sm" target="_blank" href="https://arxiv.org/abs/2403.18447"><i class="bi bi-file-earmark-pdf-fill"></i> Paper</a>
+                    <a class="btn btn-outline-secondary btn-sm" target="_blank" href="https://ojs.aaai.org/index.php/AAAI/article/view/25322"><i class="bi bi-file-text"></i> AAAI</a>
+                    <a class="btn btn-outline-secondary btn-sm" target="_blank" href="https://arxiv.org/abs/2301.00555"><i class="bi bi-file-earmark-pdf-fill"></i> Paper</a>
                     <a class="btn btn-outline-secondary btn-sm" target="_blank" href="https://github.com/jsshin98/SSGNet"><i class="bi bi-github"></i> Code</a>
                   </div>
                 </div>
