--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
               <h3>PhD candidate in AI Graduate School
               </h3>
               <p>
-                I am a Ph.D. Candidate at School of Electrical Engineering and Computer Science, GIST, advised by Prof. Hae-Gon Jeon. I received B.S. degrees in EECS from GIST and GIST in 2020. 
+                I am a Ph.D. Candidate at AI Graduate School, GIST, advised by Prof. Hae-Gon Jeon. I received B.S. degrees in EECS from GIST in 2020. 
                 My research is focused on 3D Human Reconstruction.
               </p>
               <div class="row">
