--- a/index.html
+++ b/index.html
@@ -472,7 +472,7 @@
   <footer id="footer">
     <div class="container">
       <h3>Jisu Shin</h3>
-      <p>School of Electrical Engineering and Computer Science, Gwangju Institute of Science and Technology, South Korea</p>
+      <p>AI Graduate School, Gwangju Institute of Science and Technology, South Korea</p>
       <div class="social-links">
         <a href="#" class="footer-home"><svg xmlns="http://www.w3.org/2000/svg" style="vertical-align: -0.175em;" width="2.125em" height="2em" viewBox="0 0 24 24"><path d="M21.743 12.331l-9-10c-.379-.422-1.107-.422-1.486 0l-9 10a.998.998 0 0 0-.17 1.076c.16.361.518.593.913.593h2v7a1 1 0 0 0 1 1h3a1 1 0 0 0 1-1v-4h4v4a1 1 0 0 0 1 1h3a1 1 0 0 0 1-1v-7h2a.998.998 0 0 0 .743-1.669z" fill="currentColor"/></svg>
         <!-- <a href="https://ihbae.com/cv/inhwanbae_personal_cv.pdf" target="_blank" class="footer-cv"><svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="img" style="vertical-align: -0.125em;" width="0.875em" height="1em" preserveAspectRatio="xMidYMid meet" viewBox="0 0 16 16"><path fill="currentColor" d="M9.293 0H4a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2V4.707A1 1 0 0 0 13.707 4L10 .293A1 1 0 0 0 9.293 0zM9.5 3.5v-2l3 3h-2a1 1 0 0 1-1-1zM4.5 9a.5.5 0 0 1 0-1h7a.5.5 0 0 1 0 1h-7zM4 10.5a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 0 1h-7a.5.5 0 0 1-.5-.5zm.5 2.5a.5.5 0 0 1 0-1h4a.5.5 0 0 1 0 1h-4z"></path></svg></a> -->
