--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
             </div>
             <div class="resume-item">
               <h4>Bachelor of Electrical Engineering and Computer Science</h4>
-              <h5>2017 - 2020</h5>
+              <h5>2017 - 2021</h5>
               <p><em>Gwangju Institute of Science and Technology, Gwangju, South Korea</em></p>
               <p>Advisor: Prof. Hae-Gon Jeon</p>
             </div>
@@ -326,16 +326,16 @@
             <div class="portfolio-wrap">
               <div class="row">
                 <div class="col-lg-2 col-md-3 col-sm-4 col-xs-6">
-                  <img src="assets/img/publication/Fig_2022_AAAI.gif" class="img-fluid my-sm-1">
+                  <img src="assets/img/canonicalfusion.png" class="img-fluid my-sm-1">
                 </div>
                 <div class="col-lg-10 col-md-9 col-sm-8 col-xs-6">
                   <h4 class="title">CanonicalFusion: Generating Drivable 3D Human Avatars from Multiple Images</h4>
                   <p class="author"><b>Jisu Shin</b>, Junmyeong Lee, Seongmin Lee, Min-Gyu Park, Ju-Mi Kang, Ju Hong Yoon, and Hae-Gon Jeon</p>
                   <p class="description">European Conference on Computer Vision (ECCV), 2024</p>
                   <div class="link">
-                    <a class="btn btn-outline-secondary btn-sm" target="_blank" href="https://eccv.ecva.net/"><i class="bi bi-file-earmark-pdf-fill"></i> ECCV</a>
+                    <a class="btn btn-outline-secondary btn-sm" target="_blank" href="https://eccv.ecva.net/"><i class="bi bi-file-text"></i> ECCV</a>
                     <a class="btn btn-outline-secondary btn-sm" target="_blank" href="https://arxiv.org/pdf/2405.11867"><i class="bi bi-file-earmark-pdf-fill"></i> Paper</a>
-                    <a class="btn btn-outline-secondary btn-sm" target="_blank"> Code (Not yet) </a>
+                    <a class="btn btn-outline-secondary btn-sm" target="_blank" href="https://github.com/jsshin98/CanonicalFusion"><i class="bi bi-github"></i> Code</a>
                   </div>
                 </div>
               </div>
