--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
             <div class="icon-box">
               <div class="icon"><i class="bx bx-cube-alt"></i></div>
               <h4 class="title"><a href="">3D Human Reconstruction</a></h4>
-              <p class="description">Drivable 3D Avatar Generation, </p>
+              <p class="description">Drivable 3D Avatar Generation, Human Model Representations, Geometry Optimization</p>
             </div>
           </div>
 
