--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
                   <p class="description">European Conference on Computer Vision (ECCV), 2024</p>
                   <div class="link">
                     <a class="btn btn-outline-secondary btn-sm" target="_blank" href="https://eccv.ecva.net/"><i class="bi bi-file-text"></i> ECCV</a>
-                    <a class="btn btn-outline-secondary btn-sm" target="_blank" href="https://arxiv.org/pdf/2405.11867"><i class="bi bi-file-earmark-pdf-fill"></i> Paper</a>
+                    <a class="btn btn-outline-secondary btn-sm" target="_blank" href="https://arxiv.org/abs/2407.04345"><i class="bi bi-file-earmark-pdf-fill"></i> Paper</a>
                     <a class="btn btn-outline-secondary btn-sm" target="_blank" href="https://github.com/jsshin98/CanonicalFusion"><i class="bi bi-github"></i> Code</a>
                   </div>
                 </div>
