--- a/index.html
+++ b/index.html
@@ -387,6 +387,55 @@
       </div>
     </section><!-- End Portfolio Section -->
 
+    <!-- ======= Talks Section ======= -->
+    <section id="talks" class="talks">
+      <div class="container">
+
+        <div class="section-title">
+          <h2>Press & Talks</h2>
+        </div>
+
+        <div id="talks-slider" class="talks-slider swiper"><!--data-aos="fade-up" data-aos-delay="100"-->
+          <div class="swiper-wrapper">
+            <!--press release: You have control over what is put in your press release / news article: You do not have any control over what the third party writes in their media outlet.-->
+
+            <div class="swiper-slide" OnClick="location.href='https://translate.google.com/translate?hl=en&sl=ko&tl=en&u=https%3A%2F%2Fwww.aitimes.kr%2Fnews%2FarticleView.html%3Fidxno%3D30902'" style="cursor:pointer;">
+              <div class="talk-item">
+                <div class="image-container">
+                  <img width="470" height="315" src="assets/img/pressdecolor.jpg" alt="" loading="lazy">
+                </div>
+                <div>
+                  <h3><a>Press Release</a></h3>
+                  <h4>Jun 18, 2024</h4>
+                  <p>The article reports GIST's development of a pedestrian path prediction algorithm that uses a large language model to imitate human thinking.</p>
+                </div>
+              </div>
+            </div>
+
+            <div class="swiper-slide">
+              <div class="talk-item">
+                <div class="youtube-container" id="xC9n2WlfsTI">
+                  <button class="youtube-play"></button>
+                </div>
+                <div OnClick="location.href='https://translate.google.com/translate?hl=en&sl=ko&tl=en&u=https%3A%2F%2Fai.gist.ac.kr%2Fprog%2FyoutubeDetail%2FYN_000000001341%2Flist.do%3Fmno%3Dsub01_05'" style="cursor:pointer;">
+                  <h3><a>Admission Video</a></h3>
+                  <h4>Mar 31, 2023</h4>
+                  <p>Interview with current student Jisu Shin, highlighting his publication experience in AI graduate school.</p>
+                </div>
+              </div>
+            </div>
+
+          </div>
+          <div class="swiper-button-prev"></div>
+          <div class="swiper-button-next"></div>
+          <div class="swiper-pagination"></div>
+        </div>
+
+      </div>
+    </section>
+
+    <!-- End Talks Section -->
+
     <!-- ======= Contact Section ======= -->
     <section id="contact" class="contact section-bg">
       <div class="container">
