--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
               <li data-filter="*" class="filter-active">All</li>
               <li data-filter=".filter-conf">Conference</li>
               <li data-filter=".filter-jour">Journal</li>
-              <!-- <li data-filter=".filter-pat">patent</li> -->
+              <li data-filter=".filter-pat">patent</li>
             </ul>
           </div>
         </div>
@@ -381,11 +381,138 @@
               </div>
             </div>
           </div>
-          
+
+          <div class="portfolio-item filter-pat">
+            <div class="portfolio-wrap">
+              <div class="row">
+                <div class="col-lg-2 col-md-3 col-sm-4 col-xs-6">
+                  <img src="assets/img/patent-icon.svg" class="img-fluid my-sm-1">
+                </div>
+                <div class="col-lg-10 col-md-9 col-sm-8 col-xs-6">
+                  <h4 class="title">METHOD FOR CREATING BLACK-AND-WHITE PHOTO THAT IMITATES EXPERT RETOUCHING STYLES</h4>
+                  <p class="author">Hae-Gon Jeon, Seunghyun Shin, <b>Jisu Shin</b>, Jihwan Bae, and Inwook Shim</p>
+                  <p class="description">US Patent App. 18/508.456, Nov 2023</p>
+                  <!-- <div class="link">
+                    <a class="btn btn-outline-secondary btn-sm" target="_blank" href="https://ojs.aaai.org/index.php/AAAI/article/view/25322"><i class="bi bi-file-text"></i> AAAI</a>
+                    <a class="btn btn-outline-secondary btn-sm" target="_blank" href="https://arxiv.org/abs/2301.00555"><i class="bi bi-file-earmark-pdf-fill"></i> Paper</a>
+                    <a class="btn btn-outline-secondary btn-sm" target="_blank" href="https://github.com/jsshin98/SSGNet"><i class="bi bi-github"></i> Code</a> -->
+                  <!-- </div> -->
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="portfolio-item filter-pat">
+            <div class="portfolio-wrap">
+              <div class="row">
+                <div class="col-lg-2 col-md-3 col-sm-4 col-xs-6">
+                  <img src="assets/img/patent-icon.svg" class="img-fluid my-sm-1">
+                </div>
+                <div class="col-lg-10 col-md-9 col-sm-8 col-xs-6">
+                  <h4 class="title">METHOD FOR CREATING BLACK-AND-WHITE PHOTO THAT IMITATES EXPERT RETOUCHING STYLES</h4>
+                  <p class="author">Hae-Gon Jeon, Seunghyun Shin, <b>Jisu Shin</b>, Jihwan Bae, and Inwook Shim</p>
+                  <p class="description">Korea Patent App. 10-2023-0030667, Mar 2023</p>
+                  <!-- <div class="link">
+                    <a class="btn btn-outline-secondary btn-sm" target="_blank" href="https://ojs.aaai.org/index.php/AAAI/article/view/25322"><i class="bi bi-file-text"></i> AAAI</a>
+                    <a class="btn btn-outline-secondary btn-sm" target="_blank" href="https://arxiv.org/abs/2301.00555"><i class="bi bi-file-earmark-pdf-fill"></i> Paper</a>
+                    <a class="btn btn-outline-secondary btn-sm" target="_blank" href="https://github.com/jsshin98/SSGNet"><i class="bi bi-github"></i> Code</a> -->
+                  <!-- </div> -->
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="portfolio-item filter-pat">
+            <div class="portfolio-wrap">
+              <div class="row">
+                <div class="col-lg-2 col-md-3 col-sm-4 col-xs-6">
+                  <img src="assets/img/patent-icon.svg" class="img-fluid my-sm-1">
+                </div>
+                <div class="col-lg-10 col-md-9 col-sm-8 col-xs-6">
+                  <h4 class="title">METHOD FOR GENERATING TASK-SPECIFIC SCENE STRUCTURE</h4>
+                  <p class="author">Hae-Gon Jeon, <b>Jisu Shin*</b>, Seunghyun Shin*</p>
+                  <p class="description">Korea Patent App. 10-2023-0008665, Mar 2023</p>
+                  <!-- <div class="link">
+                    <a class="btn btn-outline-secondary btn-sm" target="_blank" href="https://ojs.aaai.org/index.php/AAAI/article/view/25322"><i class="bi bi-file-text"></i> AAAI</a>
+                    <a class="btn btn-outline-secondary btn-sm" target="_blank" href="https://arxiv.org/abs/2301.00555"><i class="bi bi-file-earmark-pdf-fill"></i> Paper</a>
+                    <a class="btn btn-outline-secondary btn-sm" target="_blank" href="https://github.com/jsshin98/SSGNet"><i class="bi bi-github"></i> Code</a> -->
+                  <!-- </div> -->
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="portfolio-item filter-pat">
+            <div class="portfolio-wrap">
+              <div class="row">
+                <div class="col-lg-2 col-md-3 col-sm-4 col-xs-6">
+                  <img src="assets/img/patent-icon.svg" class="img-fluid my-sm-1">
+                </div>
+                <div class="col-lg-10 col-md-9 col-sm-8 col-xs-6">
+                  <h4 class="title">METHOD FOR GENERATING TASK-SPECIFIC SCENE STRUCTURE</h4>
+                  <p class="author">Hae-Gon Jeon, <b>Jisu Shin*</b>, Seunghyun Shin*</p>
+                  <p class="description">US Patent App. 18/410,525, Jan 2024</p>
+                  <!-- <div class="link">
+                    <a class="btn btn-outline-secondary btn-sm" target="_blank" href="https://ojs.aaai.org/index.php/AAAI/article/view/25322"><i class="bi bi-file-text"></i> AAAI</a>
+                    <a class="btn btn-outline-secondary btn-sm" target="_blank" href="https://arxiv.org/abs/2301.00555"><i class="bi bi-file-earmark-pdf-fill"></i> Paper</a>
+                    <a class="btn btn-outline-secondary btn-sm" target="_blank" href="https://github.com/jsshin98/SSGNet"><i class="bi bi-github"></i> Code</a> -->
+                  <!-- </div> -->
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="portfolio-item filter-pat">
+            <div class="portfolio-wrap">
+              <div class="row">
+                <div class="col-lg-2 col-md-3 col-sm-4 col-xs-6">
+                  <img src="assets/img/patent-icon.svg" class="img-fluid my-sm-1">
+                </div>
+                <div class="col-lg-10 col-md-9 col-sm-8 col-xs-6">
+                  <h4 class="title">IMAGE HARMONIZATION METHOD THROUGH INPAINTING BOUNDARIES OF FOREGROUND IMAGE</h4>
+                  <p class="author">Hae-Gon Jeon, <b>Jisu Shin*</b>, Seunghyun Shin*</p>
+                  <p class="description">Korea Patent App. 10-2562677, May 2022</p>
+                  <!-- <div class="link">
+                    <a class="btn btn-outline-secondary btn-sm" target="_blank" href="https://ojs.aaai.org/index.php/AAAI/article/view/25322"><i class="bi bi-file-text"></i> AAAI</a>
+                    <a class="btn btn-outline-secondary btn-sm" target="_blank" href="https://arxiv.org/abs/2301.00555"><i class="bi bi-file-earmark-pdf-fill"></i> Paper</a>
+                    <a class="btn btn-outline-secondary btn-sm" target="_blank" href="https://github.com/jsshin98/SSGNet"><i class="bi bi-github"></i> Code</a> -->
+                  <!-- </div> -->
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
 
       </div>
     </section><!-- End Portfolio Section -->
+
+    <!-- ======= Academic Services Section ======= -->
+    <section id="service" class="service">
+      <div class="container">
+
+        <div class="section-title">
+          <h2>Academic Services</h2>
+          <!--<p>Section description sentences</p>-->
+        </div>
+
+        <div class="service-content"><!--data-aos="fade-up"-->
+          <h3 class="service-title">Conference Reviewer</h3>
+          <ul>
+            <li>IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR) - 2024</li>
+          </ul>
+        </div>
+
+        <div class="service-content"><!--data-aos="fade-up"-->
+          <h3 class="service-title">Journal Reviewer</h3>
+          <ul>
+              <li>Neural Networks, Elsevier</li>
+          </ul>
+
+        </div>
+      </div>
+
+    </section>
+    <!-- End Academic Services Section -->
 
     <!-- ======= Talks Section ======= -->
     <section id="talks" class="talks">
