--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
           <li><a class="nav-link scrollto" href="#services">Research Interests</a></li>
           <li><a class="nav-link scrollto" href="#resume">Resume</a></li>
           <li><a class="nav-link scrollto" href="#portfolio">Publications</a></li>
+          <li><a class="nav-link scrollto" href="#awards">Honors & Awards</a></li>
           <!-- <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="#">Drop Down 1</a></li>
@@ -124,7 +125,7 @@
                 <div class="col-md-6 d-md-flex align-items-md-stretch">
                   <div class="count-box">
                     <i class="bi bi-google"></i>
-                    <p><a href="https://scholar.google.com/citations?user=wsFT2G8AAAAJ&hl=en", title="Go to the page", target="_blank"><strong>Google Scholar</strong></a></p>
+                    <p><a href="https://scholar.google.com/citations?user=lJuBuBgAAAAJ&hl=en", title="Go to the page", target="_blank"><strong>Google Scholar</strong></a></p>
                   </div>
                 </div>
 
@@ -486,6 +487,35 @@
       </div>
     </section><!-- End Portfolio Section -->
 
+    <!-- ======= Honors & Awards Section ======= -->
+    <section id="awards" class="awards">
+      <div class="container">
+
+        <div class="section-title">
+          <h2>Honors & Awards</h2>
+          <!--<p>Section description sentences</p>-->
+        </div>
+
+        <div class="service-content"><!--data-aos="fade-up"-->
+          <h3 class="service-title">Honors</h3>
+          <ul>
+            <li>Selected as Summer School Exchange Program Scholarship on UC Berkeley, Jun 2018 ~ Aug 2018</li>
+            <li>Selected as Internship Program on Korea Electronics Technology Institute (KETI), Jun 2023 ~ Mar 2024</li>
+            <li>Selected as Internship Program on Electronics and Telecommunications Research Institute (ETRI), Jul 2019 ~ Aug 2019</li>
+          </ul>
+        </div>
+
+        <div class="service-content"><!--data-aos="fade-up"-->
+          <h3 class="service-title">Awards</h3>
+          <ul>
+              <li>Excellent Paper Award, The 29th International Workshop on Frontiers of Computer Vision (IW-FCV 2023), Feb 2023 </li>
+          </ul>
+        </div>
+      </div>
+
+    </section>
+    <!-- End Academic Services Section -->
+
     <!-- ======= Academic Services Section ======= -->
     <section id="service" class="service">
       <div class="container">
@@ -529,7 +559,7 @@
             <div class="swiper-slide" OnClick="location.href='https://translate.google.com/translate?hl=en&sl=ko&tl=en&u=https%3A%2F%2Fwww.aitimes.kr%2Fnews%2FarticleView.html%3Fidxno%3D30902'" style="cursor:pointer;">
               <div class="talk-item">
                 <div class="image-container">
-                  <img width="470" height="315" src="assets/img/pressdecolor.jpg" alt="" loading="lazy">
+                  <img width="450" height="315" src="assets/img/pressdecolor.jpg" alt="" loading="lazy">
                 </div>
                 <div>
                   <h3><a>Press Release</a></h3>
