--- a/index.html
+++ b/index.html
@@ -564,7 +564,7 @@
                 <div>
                   <h3><a>Press Release</a></h3>
                   <h4>Jun 18, 2024</h4>
-                  <p>The article reports GIST's development of a pedestrian path prediction algorithm that uses a large language model to imitate human thinking.</p>
+                  <p>The article reports GIST's development of a aesthetic black and white photography retouching algorithm that mimics the style of photographer easily.</p>
                 </div>
               </div>
             </div>
@@ -577,7 +577,7 @@
                 <div OnClick="location.href='https://translate.google.com/translate?hl=en&sl=ko&tl=en&u=https%3A%2F%2Fai.gist.ac.kr%2Fprog%2FyoutubeDetail%2FYN_000000001341%2Flist.do%3Fmno%3Dsub01_05'" style="cursor:pointer;">
                   <h3><a>Admission Video</a></h3>
                   <h4>Mar 31, 2023</h4>
-                  <p>Interview with current student Jisu Shin, highlighting his publication experience in AI graduate school.</p>
+                  <p>Interview with current student Jisu Shin, highlighting her publication experience in AI graduate school.</p>
                 </div>
               </div>
             </div>
