--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
               </h3>
               <p>
                 I am a Ph.D. Candidate at AI Graduate School, GIST, advised by Prof. Hae-Gon Jeon. I received B.S. degrees in EECS from GIST in 2020. 
-                My research is focused on 3D Human Reconstruction.
+                My research is mainly focused on 3D Vision. <b>I am scheduled to visit the U.K. this November for an internship with the 3D Vision Team at Huawei Noah's Ark Lab. Looking forward to the experience!</b>
               </p>
               <div class="row">
                 <div class="col-md-6 d-md-flex align-items-md-stretch">
@@ -158,8 +158,8 @@
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-cube-alt"></i></div>
-              <h4 class="title"><a href="">3D Human Reconstruction</a></h4>
-              <p class="description">Drivable 3D Avatar Generation, Human Model Representations, Geometry Optimization</p>
+              <h4 class="title"><a href="">3D Reconstruction</a></h4>
+              <p class="description">Drivable 3D Avatar Generation, Human Model Representations, Scene Representation (Gaussian Splatting)</p>
             </div>
           </div>
 
@@ -167,7 +167,7 @@
             <div class="icon-box">
               <div class="icon"><i class="bx bi-image"></i></div>
               <h4 class="title"><a href="">Computer Vision</a></h4>
-              <p class="description">Aesthetic Image Enhancement, Low-level Vision, Large Language Model, Diffusion Model</p>
+              <p class="description">Aesthetic Image Enhancement, Low-level Vision, Diffusion Model</p>
             </div>
           </div>
 
@@ -274,6 +274,16 @@
               <p>
               <ul>
                 <li>Drivable 3D Human Generation</li>
+              </ul>
+              </p>
+            </div>
+            <div class="resume-item">
+              <h4>Research Intern</h4>
+              <h5>Nov. 2024 - Jul. 2025 (planned)</h5>
+              <p><em> 3D Vision Team, Huawei Noah's Ark Lab, United Kingdom</em></p>
+              <p>
+              <ul>
+                <li>3D Scene Reconstruction using Gaussian Splatting</li>
               </ul>
               </p>
             </div>
