--- a/index.html
+++ b/index.html
@@ -498,7 +498,7 @@
     </section><!-- End Portfolio Section -->
 
     <!-- ======= Honors & Awards Section ======= -->
-    <section id="awards" class="awards">
+    <section id="awards" class="awards section-bg">
       <div class="container">
 
         <div class="section-title">
@@ -527,7 +527,7 @@
     <!-- End Academic Services Section -->
 
     <!-- ======= Academic Services Section ======= -->
-    <section id="service" class="service">
+    <section id="service" class="service section-bg">
       <div class="container">
 
         <div class="section-title">
@@ -539,6 +539,7 @@
           <h3 class="service-title">Conference Reviewer</h3>
           <ul>
             <li>IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR) - 2024</li>
+            <li>The Association for the Advancement of Artificial Intelligence (AAAI) - 2025</li>
           </ul>
         </div>
 
@@ -555,7 +556,7 @@
     <!-- End Academic Services Section -->
 
     <!-- ======= Talks Section ======= -->
-    <section id="talks" class="talks">
+    <section id="talks" class="talks section-bg">
       <div class="container">
 
         <div class="section-title">
@@ -563,8 +564,22 @@
         </div>
 
         <div id="talks-slider" class="talks-slider swiper"><!--data-aos="fade-up" data-aos-delay="100"-->
+          <!--press release: You have control over what is put in your press release / news article: You do not have any control over what the third party writes in their media outlet.-->
+
           <div class="swiper-wrapper">
-            <!--press release: You have control over what is put in your press release / news article: You do not have any control over what the third party writes in their media outlet.-->
+
+            <div class="swiper-slide" OnClick="location.href='https://translate.google.com/translate?hl=en&sl=ko&tl=en&u=https%3A%2F%2Fwww.etnews.com%2F20240925000077'" style="cursor:pointer;">
+              <div class="talk-item">
+                <div class="image-container">
+                  <img width="450" height="315" src="assets/img/presscanonfusion.png" alt="" loading="lazy">
+                </div>
+                <div>
+                  <h3><a>Press Release</a></h3>
+                  <h4>Sep 25, 2024</h4>
+                  <p>The article reports GIST's development of an animatable 3D human avatar from multiple images using forward skinning-based differentiable rendering.</p>
+                </div>
+              </div>
+            </div>
 
             <div class="swiper-slide" OnClick="location.href='https://translate.google.com/translate?hl=en&sl=ko&tl=en&u=https%3A%2F%2Fwww.aitimes.kr%2Fnews%2FarticleView.html%3Fidxno%3D30902'" style="cursor:pointer;">
               <div class="talk-item">
