--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
               </h3>
               <p>
                 I am a Ph.D. Candidate at AI Graduate School, GIST, advised by Prof. Hae-Gon Jeon. I received B.S. degrees in EECS from GIST in 2020. 
-                My research is mainly focused on 3D Vision. <b>I am scheduled to visit the U.K. this November for an internship with the 3D Vision Team at Huawei Noah's Ark Lab. Looking forward to the experience!</b>
+                My research is mainly focused on 3D Vision. I am currently doing a research internship with the 3D Vision Team at Huawei Noah's Ark Lab, London, UK, until Aug. 2025.
               </p>
               <div class="row">
                 <div class="col-md-6 d-md-flex align-items-md-stretch">
@@ -159,7 +159,7 @@
             <div class="icon-box">
               <div class="icon"><i class="bx bx-cube-alt"></i></div>
               <h4 class="title"><a href="">3D Reconstruction</a></h4>
-              <p class="description">Drivable 3D Avatar Generation, Human Model Representations, Scene Representation (Gaussian Splatting)</p>
+              <p class="description">Gaussian Splatting, View Synthesis, 3D Human Reconstruction and Animation</p>
             </div>
           </div>
 
@@ -183,15 +183,16 @@
         </div>
       </div>
     </section><!-- End Services Section -->
+    
 
     <!-- ======= Skills Section ======= -->
-    <section id="skills" class="skills section-bg">
+    <!-- <section id="skills" class="skills section-bg">
       <div class="container">
 
         <div class="section-title">
           <h2>Skills</h2>
-          <!-- <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p> -->
-        </div>
+          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p> -->
+        <!-- </div>
 
         <div class="row skills-content">
 
@@ -211,7 +212,6 @@
               </div>
             </div>
 
-<!-- 
             <div class="progress">
               <span class="skill">Tensorflow <i class="val">80%</i></span>
               <div class="progress-bar-wrap">
@@ -224,12 +224,13 @@
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
-            </div> -->
+            </div>
 
           </div>
         </div>
       </div>
-    </section><!-- End Skills Section -->
+    </section> -->
+    <!-- End Skills Section -->
 
     <!-- ======= Resume Section ======= -->
     <section id="resume" class="resume section-bg">
@@ -237,7 +238,7 @@
 
         <div class="section-title">
           <h2>Resume</h2>
-          <p>My resume</p>
+          <!-- <p>My resume</p> -->
         </div>
 
         <div class="row">
@@ -256,14 +257,13 @@
               </ul>
               </p>
             </div> -->
-
             <div class="resume-item">
               <h4>Research Intern</h4>
-              <h5>Jun. 2019 - Aug. 2019</h5>
-              <p><em> ETRI (Electronics and Telecommunications Research Institute), Daejeon, South Korea</em></p>
+              <h5>Dec. 2024 - Aug. 2025</h5>
+              <p><em> 3D Vision Team, Huawei Noah's Ark Lab, United Kingdom</em></p>
               <p>
               <ul>
-                <li>Edge Computing & Computer Network</li>
+                <li>3D Scene Reconstruction using Gaussian Splatting</li>
               </ul>
               </p>
             </div>
@@ -279,11 +279,11 @@
             </div>
             <div class="resume-item">
               <h4>Research Intern</h4>
-              <h5>Nov. 2024 - Jul. 2025 (planned)</h5>
-              <p><em> 3D Vision Team, Huawei Noah's Ark Lab, United Kingdom</em></p>
+              <h5>Jun. 2019 - Aug. 2019</h5>
+              <p><em> ETRI (Electronics and Telecommunications Research Institute), Daejeon, South Korea</em></p>
               <p>
               <ul>
-                <li>3D Scene Reconstruction using Gaussian Splatting</li>
+                <li>Edge Computing & Computer Network</li>
               </ul>
               </p>
             </div>
@@ -333,6 +333,26 @@
 
         <div class="row portfolio-container">
 
+          <div class="portfolio-item filter-jour">
+            <div class="portfolio-wrap">
+              <div class="row">
+                <div class="col-lg-2 col-md-3 col-sm-4 col-xs-6">
+                  <img src="assets/img/asr.png" class="img-fluid my-sm-1">
+                </div>
+                <div class="col-lg-10 col-md-9 col-sm-8 col-xs-6">
+                  <h4 class="title">The path-tracing simulation of light-field camera system: SurfCam/GrainCams for lunar surface exploration</h4>
+                  <p class="author">Minbae Kim, Minsup Jeong, Mingyeong Lee, Jihun Kim, Young-Jun Choi, Sungsoo S Kim, Hae-Gon Jeon, and <b>Jisu Shin</b></p>
+                  <p class="description">Advances in Space Research, 2024</p>
+                  <div class="link">
+                    <a class="btn btn-outline-secondary btn-sm" target="_blank" href="https://www.sciencedirect.com/journal/advances-in-space-research"><i class="bi bi-file-text"></i> ASR</a>
+                    <a class="btn btn-outline-secondary btn-sm" target="_blank" href="https://pdf.sciencedirectassets.com/271642/AIP/1-s2.0-S0273117724012419/main.pdf?X-Amz-Security-Token=IQoJb3JpZ2luX2VjEE4aCXVzLWVhc3QtMSJHMEUCIHAYH6mj%2BRnViT7Qi3zWfzszFtlXOLUivevhN%2BPD5SDgAiEAyt6W%2FizNSHXuex5O7lBMHJYeAxKSF9fCQx69jsvyO%2BYqswUIRxAFGgwwNTkwMDM1NDY4NjUiDPsBZsve6LoFIsYBQCqQBU0sKBz4UmZGzfsV%2FZFxmU7uDpqcMo4IherWbg9Oh1qbpd9Psv9NkHdmxeduwwhumZB2BpTAhgO5c%2FEPWzjSU180Ulbeoq0kLdrtQnXxh6v5But47rQxpjwund48BnBymm3NDZ4lbvwxQs8NICII1zU6i0pb1t5Wwl54jHAfouSnSFOmJps30Msgfa2I9vjkZVwzd6jrLknLkFfLVrLoWRAufdrloBo0myEe36WTOUc09HTxAJpXVst1RFiUSCIFQFsgtvXc3%2B1G95ok5mHQiT4ucS90hadjBTe9gCleNnSp3FGePqjwZW0BAdVpmjAWJzn488GVXIDQrORbEh7O9vd2OqhmG17uILIPi8S5HuBJJ2Aucx11I51XFJwNA4Op6zOTK2XOol0ovW714slHZEu1zsy6Mvwm2Vlj71LFP8%2FCrpQsB%2Bt29EqBIUgI6FzZ0p1%2BhyIe45arZTIuNxqFEPy6X4XzFkOSgce3MIsjWhoYkFnuvm8uPbJA3RtO399SnFoFgnurjxQH7xOpQhh4sfHICCjzNLfRwsb02oTYRC0Ilb%2F0rkfwrPbNdOoV%2BxbaubJNuOJoC%2FNnR9KdiVBvv1FzpQJoPuoz3XkLeuCxZ0LFww1hv2ch71ef%2FW9g%2BQ6kvw7z%2BPwvpbUZr8GaCS6It%2BF54VqgmVi2abhBL2mVxzsZFI1jGeusGCXqmeOZDLECgNTvkbzbqzwx7CuBNhC6ltI%2BZTkMG1I4%2FHqLtH9OpY92J%2BenJV1tFH%2FXHf6APqcFAGMRLcOBFih9R7iS226lSrtH761VNOOSjjES%2B%2FZfc1vqWBf1uc66NC9KER8ROG%2BYobwozpMsaSLv9yXBihgNVQYJxC9xpj9R0f22bvzpt%2F2yMNSSpLwGOrEB%2FmEkdO83A3njSH8FY9lkxrKKX9cSggyszDZmqA2OpbD8TxcETb6HdjHRT5W2SfTBgqaYwfA%2B11ODtua0rmBtfac2la%2FNbjtNInpJXY5mBuXICEH7dBwTx6gGOqeLkbfhdPmqUFJN%2FHimbzp8V197zzy3pVm9CVAYha2Uocm7usVAaTyhxjyqQHsEfe3hzOueqopkQWF%2F%2FoH%2FYU1gzfikaWQqkGlS2VYT9sStsGe4IRC4&X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Date=20250116T144326Z&X-Amz-SignedHeaders=host&X-Amz-Expires=300&X-Amz-Credential=ASIAQ3PHCVTYRIWHQ54B%2F20250116%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Signature=524ad56e65d67da5b14c5cfe63207ce3d93fa19a9e98ef094bac0b3043b8a62e&hash=dd242322434ef34ab0cc05e5bbe31b8ce60e0647d87822136560f14f00fd443e&host=68042c943591013ac2b2430a89b270f6af2c76d8dfd086a07176afe7c76c2c61&pii=S0273117724012419&tid=spdf-c64b891b-7b51-4f5a-bec9-ccb13e9dd5c5&sid=8cfd6848255ed14b955baec73f538d5d9e6cgxrqb&type=client&tsoh=d3d3LnNjaWVuY2VkaXJlY3QuY29t&ua=01025f5454070a550101&rr=902ee0bb9b169fb8&cc=gb"><i class="bi bi-file-earmark-pdf-fill"></i> Paper</a>
+                    <!-- <a class="btn btn-outline-secondary btn-sm" target="_blank" href="https://github.com/jsshin98/CanonicalFusion"><i class="bi bi-github"></i> Code</a> -->
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
           <div class="portfolio-item filter-conf">
             <div class="portfolio-wrap">
               <div class="row">
@@ -365,7 +385,7 @@
                   <p class="description">Computer Vision and Pattern Recognition (CVPR), 2024</p>
                   <div class="link">
                     <a class="btn btn-outline-secondary btn-sm" target="_blank" href="https://cvpr.thecvf.com/Conferences/2024"><i class="bi bi-file-text"></i> CVPR</a>
-                    <a class="btn btn-outline-secondary btn-sm" target="_blank" href="https://arxiv.org/pdf/2405.11867"><i class="bi bi-file-earmark-pdf-fill"></i> Paper</a>
+                    <a class="btn btn-outline-secondary btn-sm" target="_blank" href="https://openaccess.thecvf.com/content/CVPR2024/papers/Shin_Close_Imitation_of_Expert_Retouching_for_Black-and-White_Photography_CVPR_2024_paper.pdf"><i class="bi bi-file-earmark-pdf-fill"></i> Paper</a>
                     <a class="btn btn-outline-secondary btn-sm" target="_blank" href="https://github.com/seunghyuns98/Decolorization"><i class="bi bi-github"></i> Code</a>
                   </div>
                 </div>
@@ -512,6 +532,7 @@
             <li>Selected as Summer School Exchange Program Scholarship on UC Berkeley, Jun 2018 ~ Aug 2018</li>
             <li>Selected as Internship Program on Korea Electronics Technology Institute (KETI), Jun 2023 ~ Mar 2024</li>
             <li>Selected as Internship Program on Electronics and Telecommunications Research Institute (ETRI), Jul 2019 ~ Aug 2019</li>
+            <li>Selected as Internship Program on 3D Vision Team at Huawei Noah's Ark Lab, United Kingdom, Dec 2024 ~ Aug 2025</li>
           </ul>
         </div>
 
@@ -519,6 +540,9 @@
           <h3 class="service-title">Awards</h3>
           <ul>
               <li>Excellent Paper Award, The 29th International Workshop on Frontiers of Computer Vision (IW-FCV 2023), Feb 2023 </li>
+              <li>Finalist, 2024 Qualcomm Innovation Fellowship Korea, Qualcomm Technologies, Inc., Dec 2024 </li>
+              <li>7th Hong Bok-Soon Scholarship, Development Foundation, GIST, Nov 2024. </li>
+
           </ul>
         </div>
       </div>
@@ -540,6 +564,7 @@
           <ul>
             <li>IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR) - 2024</li>
             <li>The Association for the Advancement of Artificial Intelligence (AAAI) - 2025</li>
+            <li>IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR) - 2025</li>
           </ul>
         </div>
 
