--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
             <div class="portfolio-wrap">
               <div class="row">
                 <div class="col-lg-2 col-md-3 col-sm-4 col-xs-6">
-                  <img src="assets/img/asr.png" class="img-fluid my-sm-1">
+                  <img src="assets/img/asr1.png" class="img-fluid my-sm-1">
                 </div>
                 <div class="col-lg-10 col-md-9 col-sm-8 col-xs-6">
                   <h4 class="title">The path-tracing simulation of light-field camera system: SurfCam/GrainCams for lunar surface exploration</h4>
