--- a/index.html
+++ b/index.html
@@ -529,10 +529,11 @@
         <div class="service-content"><!--data-aos="fade-up"-->
           <h3 class="service-title">Honors</h3>
           <ul>
-            <li>Selected as Summer School Exchange Program Scholarship on UC Berkeley, Jun 2018 ~ Aug 2018</li>
-            <li>Selected as Internship Program on Korea Electronics Technology Institute (KETI), Jun 2023 ~ Mar 2024</li>
-            <li>Selected as Internship Program on Electronics and Telecommunications Research Institute (ETRI), Jul 2019 ~ Aug 2019</li>
+            <li>Selected as the Participants for International Computer Vision Summer School (ICVSS), July 2025</li>
             <li>Selected as Internship Program on 3D Vision Team at Huawei Noah's Ark Lab, United Kingdom, Dec 2024 ~ Aug 2025</li>
+            <li>Selected as Internship Program on Electronics and Telecommunications Research Institute (ETRI), Jul 2019 ~ Aug 2019</li>
+            <li>Selected as Internship Program on Korea Electronics Technology Institute (KETI), Jun 2023 ~ Mar 2024</li>
+            <li>Selected as Summer School Exchange Program Scholarship on UC Berkeley, Jun 2018 ~ Aug 2018</li>
           </ul>
         </div>
 
