--- a/index.html
+++ b/index.html
@@ -333,6 +333,27 @@
 
         <div class="row portfolio-container">
 
+          
+          <div class="portfolio-item filter-conf">
+            <div class="portfolio-wrap">
+              <div class="row">
+                <div class="col-lg-2 col-md-3 col-sm-4 col-xs-6">
+                  <img src="assets/img/video_color.png" class="img-fluid my-sm-1">
+                </div>
+                <div class="col-lg-10 col-md-9 col-sm-8 col-xs-6">
+                  <h4 class="title">Video Color Grading via Look-Up Table Generation</h4>
+                  <p class="author">Seunghyun Shin, Dongmin Shin, <b>Jisu Shin</b>, Hae-Gon Jeon, and Joon-Young Lee</p>
+                  <p class="description">International Conference on Computer Vision (ICCV), 2025</p>
+                  <div class="link">
+                    <a class="btn btn-outline-secondary btn-sm" target="_blank" href=""><i class="bi bi-file-text"></i> ICCV</a>
+                    <a class="btn btn-outline-secondary btn-sm" target="_blank" href=""><i class="bi bi-file-earmark-pdf-fill"></i> Paper</a>
+                    <a class="btn btn-outline-secondary btn-sm" target="_blank" href=""><i class="bi bi-github"></i> Code</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
           <div class="portfolio-item filter-jour">
             <div class="portfolio-wrap">
               <div class="row">
@@ -393,6 +414,25 @@
             </div>
           </div>
 
+          <div class="portfolio-item filter-jour">
+            <div class="portfolio-wrap">
+              <div class="row">
+                <div class="col-lg-2 col-md-3 col-sm-4 col-xs-6">
+                  <img src="assets/img/ssgnet_journal.png" class="img-fluid my-sm-1">
+                </div>
+                <div class="col-lg-10 col-md-9 col-sm-8 col-xs-6">
+                  <h4 class="title">Scene Structure Guidance Network: Unfolding Graph Partitioning into Pixel-Wise Feature Learning</h4>
+                  <p class="author"><b>Jisu Shin</b>, Seunghyun Shin, and Hae-Gon Jeon</p>
+                  <p class="description">Arxiv</p>
+                  <div class="link">
+                    <a class="btn btn-outline-secondary btn-sm" target="_blank" href="https://arxiv.org/abs/2301.00555"><i class="bi bi-file-earmark-pdf-fill"></i> Paper</a>
+                    <!-- <a class="btn btn-outline-secondary btn-sm" target="_blank" href="https://github.com/jsshin98/CanonicalFusion"><i class="bi bi-github"></i> Code</a> -->
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
           <div class="portfolio-item filter-conf">
             <div class="portfolio-wrap">
               <div class="row">
@@ -405,7 +445,7 @@
                   <p class="description">The Thirty-Seventh AAAI Conference on Artificial Intelligence (AAAI), 2023</p>
                   <div class="link">
                     <a class="btn btn-outline-secondary btn-sm" target="_blank" href="https://ojs.aaai.org/index.php/AAAI/article/view/25322"><i class="bi bi-file-text"></i> AAAI</a>
-                    <a class="btn btn-outline-secondary btn-sm" target="_blank" href="https://arxiv.org/abs/2301.00555"><i class="bi bi-file-earmark-pdf-fill"></i> Paper</a>
+                    <a class="btn btn-outline-secondary btn-sm" target="_blank" href="https://ojs.aaai.org/index.php/AAAI/article/view/25322"><i class="bi bi-file-earmark-pdf-fill"></i> Paper</a>
                     <a class="btn btn-outline-secondary btn-sm" target="_blank" href="https://github.com/jsshin98/SSGNet"><i class="bi bi-github"></i> Code</a>
                   </div>
                 </div>
@@ -413,6 +453,7 @@
             </div>
           </div>
 
+          
           <div class="portfolio-item filter-pat">
             <div class="portfolio-wrap">
               <div class="row">
