--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
             <div class="portfolio-wrap">
               <div class="row">
                 <div class="col-lg-2 col-md-3 col-sm-4 col-xs-6">
-                  <img src="assets/img/video_color.png" class="img-fluid my-sm-1">
+                  <img src="assets/img/video_color2.png" class="img-fluid my-sm-1">
                 </div>
                 <div class="col-lg-10 col-md-9 col-sm-8 col-xs-6">
                   <h4 class="title">Video Color Grading via Look-Up Table Generation</h4>
